Fix: horizontal scroll on small screens

--- a/src/AppBundle/Resources/public/style/wizaplace/demo.scss
+++ b/src/AppBundle/Resources/public/style/wizaplace/demo.scss
@@ -144,3 +144,7 @@ footer {
 .slick-next {
     right: 0 !important;
 }
+
+form.searchbar {
+    flex-wrap: wrap;
+}
